--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div>
       <h1> Welcome To DSC </h1>
+      <h2> ADESH </h2>
       <form action="index.html" method="post">
         <div>
           <label>Enter your email</label><br>
